@@ -64,6 +64,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.9</version>
+          <configuration>
+            <argLine>-XX:MaxPermSize=256M</argLine>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
@@ -303,6 +306,16 @@
       <name>JBoss Repository</name>
       <url>https://repository.jboss.org/nexus/content/groups/public-jboss</url>
     </repository>
+    <repository>
+      <id>springsource-milestone</id>
+      <url>http://maven.springframework.org/milestone</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
   </repositories>
-
+  
 </project>
